For the spot description and each review card, added word-wrap: break-word to make sure super long words don't spill out of container

--- a/frontend/src/components/SpotShow/SpotShow.css
+++ b/frontend/src/components/SpotShow/SpotShow.css
@@ -152,6 +152,11 @@
     font-style: italic;
 }
 
+
+.spot-description-p {
+    word-wrap: break-word;
+}
+
 @media screen and (max-width: 1000px) {
     .spot-images {
         display: block;
